# system

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  allocation_engine.py  attribution_queries.sql  backfill_features.py  base_model.py  dashboard_config.py  dashboard_server.py  decision_engine.py  ensemble_engine.py  ensemble_model.py  gbm_model.py  inference_engine.py  metrics_engine.py  model_registry.py  model_scoring.py  online_model.py  package-lock.json  package.json  prediction_logger.py  pyproject.toml  pyrightconfig.json  regime_detector.py  requirements-amd-npu.txt  requirements-amd-rocm-full.txt  requirements-amd-rocm.lock.txt  requirements-amd-rocm.txt  requirements-base.txt  requirements-dev.in  requirements-dev.lock.txt  requirements-dev.txt  (+14 more)
.github/: CODEOWNERS
boot/: README.md  operator_engine_env.js  operator_env_file.js  operator_server.js  operator_ui.html  start_operator.bat  start_operator.sh
data/: equity_sector_reference.json  model_configs.json  sec_company_tickers_exchange.json
deploy/: LINUX_SERVER_CODEX_DEPLOY.md  PRODUCTION_FILE_MANIFEST.md  README.md  install_trading_system.sh
docs/: ARCHITECTURE.md  Audit_Chain_Spec.md  COVERAGE_GATE.md  CPU_POWER_POLICY.md  CRYPTO_COST_REALISM.md  CRYPTO_DATA_ENABLEMENT.md  CRYPTO_SESSION.md  CRYPTO_SIZING_RISK.md  DATA_CONTRACTS.md  DECOMPOSITION_CONVENTIONS.md  DEPENDENCY_PROFILES.md  DISK_RETENTION_RUNBOOK.md  DOCSTRING_STYLE.md  DOCUMENTATION_INDEX.md  Database_Production_Plan.md  Database_Schema.md  FAILURE_MODES.md  FX_COST_REALISM.md  INGESTION_NON_PRICE_BUFFER_AUDIT.md  LAN_ACCESS.md  LICENSING_NOTE.md  LIVE_READINESS_CHECKLIST.md  MAINTAINER_INDEX.md  MEMORY_PRESSURE_RUNBOOK.md  NPU_ACCELERATION.md  OBSERVABILITY.md  OS_MIGRATION_RUNBOOK.md  OVERVIEW_FOR_NEWCOMERS.md  PREDICTION_MARKET_MACRO.md  PRODUCTION_BACKEND_CI.md  PRODUCTION_CHECKLIST.md  PYRIGHT_TYPE_GATE.md  README_ARCHITECTURE.md  README_DATABASE_MAP.md  README_DEVELOPER_MAP.md  README_FUNCTION_MAP.md  README_OPERATOR_GUIDE.md  README_SEQUENCE_DIAGRAMS.md  REFERENCE_CONFIGURATION_GLOSSARY.md  REFERENCE_DATA_SOURCE_CONTROL_PLANE.md  (+13 more)
engine/: README.md  __init__.py  app.py  decision_engine.py  ensemble_engine.py  ensemble_model.py  inference_engine.py  metrics_engine.py  model_registry.py  model_scoring.py  prediction_logger.py  regime_detector.py  training_guard.py
ops/: README.md  _engine_job_wrapper.py  alerts_service.py  analyze_execution_roi.py  backtest_cpcv.py  backtest_walk_forward.py  build_social_features.py  calibrate_price_confidence.py  check_alerts.py  check_events.py  check_labels.py  check_predictions.py  compute_drift.py  compute_earnings_proximity.py  compute_exec_labels.py  compute_exec_labels_from_fills.py  compute_exec_z.py  compute_factor_features.py  compute_factor_group_scores.py  compute_gdelt_macro.py  compute_index_flow_imbalance.py  email_notifier.py  patch_dev_core_imports.py  sleep_guard.py  train_model_v2.py
routes/: __init__.py  data_sources_routes.py
scripts/: git_backup.ps1  import_graph_check.py  staging_e2e.ps1
services/: README.md  credential_encryption.py  data_source_manager.py
tests/: __init__.py  audit_chain_test_utils.py  conftest.py  promotion_test_helpers.py  test_adwin_residual_drift.py  test_alert_lifecycle_api.py  test_allocation_quarantine.py  test_allocator_option_sleeve_binding.py  test_almgren_chriss_cost.py  test_almgren_chriss_costs.py  test_alpaca_share_rounding.py  test_alpha_discovery_loop.py  test_alpha_shrinkage.py  test_alt_data_ingestion.py  test_api_client_auth.mjs  test_api_degradation_contract.py  test_api_security_hardening.py  test_api_self_repair_regressions.py  test_api_server_contract.py  test_api_system_decomposition_contract.py  test_api_system_telemetry.py  test_artifact_atomic_write_cross_fs.py  test_artifact_fsck.py  test_artifact_migrations.py  test_artifact_store_alias_history.py  test_artifact_store_local.py  test_asset_map_equity_registry.py  test_asset_map_option_branch.py  test_async_price_writer.py  test_audit_canonical.py  test_audit_chain_append.py  test_audit_chain_concurrent_writers.py  test_audit_chain_exception_propagation.py  test_audit_chain_inverted_linkage.py  test_audit_chain_tamper_detection.py  test_audit_chain_verifier.py  test_audit_fix_regressions.py  test_audit_hashing.py  test_audit_invariants.py  test_backtest_cpcv_integration.py  (+564 more)
tools/: audit_benchmark.py  audit_db_implementation.py  benchmark_financial_text_embeddings.py  benchmark_model_acceleration.py  bootstrap_local_toolchain.sh  build_linux_deploy_bundle.ps1  calibrate_edge_filter_min_net_abs_z.py  check_dashboard_ui_contract.py  check_local_asset_refs.py  check_repo_artifact_hygiene.py  compare_timescale_price_dual_write.py  compare_timescale_telemetry_dual_write.py  coverage_gate.py  export_finbert_onnx.py  git_worktree_triage.py  idle_nvme_assessment.py  ingestion_spine_benchmark.py  live_host_readiness_check.py  market_session_soak.py  migrate_artifacts.py  migrate_runtime_state.py  model_artifact_compat_gate.py  news_ingestion_selftest.py  noop_guard.py  noop_guard_baseline.json  operator_startup_audit.js  options_feature_ablation.py  pipeline_latency_load_probe.py  pipeline_smoke_test.py  precommit_text_guards.py  produce_punch_list.py  production_readiness_gate.py  public_feed_live_smoke.py  pyright_money_path_baseline.json  pyright_money_path_gate.py  replay_async_price_dead_letter.py  research_stress_smoke.py  restore_sanity.sql  run_required_backend_tests.py  run_ui_checks.mjs  (+18 more)
ui/: README.md  alerts.js  alerts_ui.js  api_client.js  base.css  bullet_bars.js  chart_a11y.js  charts.js  command_palette.mjs  confirmation_modal.mjs  copilot.js  dashboard.html  dashboard.js  dashboard_theme.css  data_health.js  data_sources.css  data_sources.html  data_sources.js  decision_attribution.js  decision_bar.js  decision_bar_boot.js  decision_drilldown.mjs  decision_overlays.js  decision_stepper.js  execution_degradation.js  fx_format.js  (+48 more)
(+1117 files in other folders)
