[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-system"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "scikit-learn>=1.5.2",
]

[project.optional-dependencies]
amd-rocm = [
  "torch @ https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2.4/torch-2.9.1%2Brocm7.2.4.lw.git39497456-cp312-cp312-linux_x86_64.whl ; python_version >= \"3.12\" and platform_system == \"Linux\"",
  "torchaudio @ https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2.4/torchaudio-2.9.0%2Brocm7.2.4.gite3c6ee2b-cp312-cp312-linux_x86_64.whl ; python_version >= \"3.12\" and platform_system == \"Linux\"",
  "triton @ https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2.4/triton-3.5.1%2Brocm7.2.4.gita272dfa8-cp312-cp312-linux_x86_64.whl ; python_version >= \"3.12\" and platform_system == \"Linux\"",
  "numpy==2.4.6",
  "scikit-learn==1.9.0",
  "lightgbm==4.6.0",
  "xgboost==2.1.4",
]
windows-dev = [
  "pywin32>=306; sys_platform == 'win32'",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["engine*", "routes*", "services*"]
