[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-system"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "scikit-learn>=1.5.2",
]

[project.optional-dependencies]
cpu-runtime = [
  "torch==2.4.1+cpu",
]
nvidia-cuda = [
  "torch==2.4.1+cu121",
  "nvidia-ml-py==13.595.45",
  "pynvml==13.0.1",
]
amd-rocm = []
ts-foundation = [
  "chronos-forecasting>=2.1.0",
  "pandas>=2.2",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["engine*", "routes*", "services*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
required_plugins = ["pytest-timeout>=2.4"]
timeout = "120"
timeout_method = "thread"
timeout_func_only = false

[tool.coverage.run]
branch = true
source = ["engine", "services", "routes", "ops"]
relative_files = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_also = [
  "if TYPE_CHECKING:",
]

[tool.coverage.xml]
output = "artifacts/coverage/coverage.xml"

[tool.coverage.json]
output = "artifacts/coverage/coverage.json"

[tool.trading_system.coverage_gate]
minimum_percent = 52.0
package_roots = ["engine", "services", "routes", "ops"]
report_dir = "artifacts/coverage"
