[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-system"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "scikit-learn>=1.5.2",
]

[project.optional-dependencies]
cpu-runtime = [
  "torch==2.4.1+cpu",
]
nvidia-cuda = [
  "torch==2.4.1+cu121",
  "nvidia-ml-py==13.595.45",
  "pynvml==13.0.1",
]
amd-rocm = [
  "torch @ https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2.4/torch-2.9.1%2Brocm7.2.4.lw.git39497456-cp312-cp312-linux_x86_64.whl ; python_version >= \"3.12\" and platform_system == \"Linux\"",
  "torchaudio @ https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2.4/torchaudio-2.9.0%2Brocm7.2.4.gite3c6ee2b-cp312-cp312-linux_x86_64.whl ; python_version >= \"3.12\" and platform_system == \"Linux\"",
  "triton @ https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2.4/triton-3.5.1%2Brocm7.2.4.gita272dfa8-cp312-cp312-linux_x86_64.whl ; python_version >= \"3.12\" and platform_system == \"Linux\"",
  "numpy==2.4.6",
  "scikit-learn==1.9.0",
  "lightgbm==4.6.0",
  "xgboost==2.1.4",
]
ts-foundation = [
  "chronos-forecasting>=2.1.0",
  "pandas>=2.2",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["engine*", "routes*", "services*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
required_plugins = ["pytest-timeout>=2.4"]
addopts = "-q --strict-markers --strict-config --durations=20"
markers = [
  "linux_only: test runs only on Linux",
  "live_network: test intentionally contacts non-local live services; deselected unless TRADING_TEST_ALLOW_LIVE_NETWORK=1",
  "requires_postgres: test needs a reachable Postgres instance at TS_PG_DSN; auto-skipped when unreachable",
  "requires_redis: test needs a reachable Redis instance at TS_REDIS_URL; auto-skipped when unreachable",
  "requires_rocm: test requires a local ROCm torch build with a visible GPU",
  "safety_critical: money-path control test that must pass on every merge",
]
filterwarnings = [
  "error",
  "ignore:enable_nested_tensor is True.*:UserWarning:torch\\.nn\\.modules\\.transformer",
  "ignore:TS_SECRETS_PROVIDER=plaintext reads raw secret files.*:RuntimeWarning",
]
timeout = "120"
timeout_method = "thread"
timeout_func_only = false

[tool.coverage.run]
branch = true
source = ["engine", "services", "routes", "ops"]
relative_files = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_also = [
  "if TYPE_CHECKING:",
]

[tool.coverage.xml]
output = "artifacts/coverage/coverage.xml"

[tool.coverage.json]
output = "artifacts/coverage/coverage.json"

[tool.trading_system.coverage_gate]
minimum_percent = 52.0
package_roots = ["engine", "services", "routes", "ops"]
report_dir = "artifacts/coverage"
zero_covered_module_roots = ["engine/risk", "engine/execution", "engine/runtime"]
zero_covered_module_allowlist = [
  "engine/execution/circuit_breaker.py",
  "engine/execution/exec_conf_calibration.py",
  "engine/execution/train_rl_strategy_policy.py",
  "engine/runtime/cache_warm.py",
  "engine/runtime/capital_efficiency.py",
  "engine/runtime/execution_barrier.py",
  "engine/runtime/observability.py",
  "engine/runtime/prod_replay_selftest.py",
  "engine/runtime/prod_selftest.py",
  "engine/runtime/prod_trade_attribution_selftest.py",
  "engine/runtime/regime_stack.py",
  "engine/runtime/rules_audit.py",
  "engine/runtime/run_root_script.py",
]

[tool.trading_system.coverage_gate.package_minimums]
"engine/risk" = 50.81
"engine/execution" = 58.92
"engine/runtime" = 58.49
